data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_38.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\93\80\80\80\00\01\03\65\6e"
    "\76\0b\73\69\64\65\5f\65\66\66\65\63\74\00\00\03"
    "\82\80\80\80\00\01\01\0a\94\80\80\80\00\01\8e\80"
    "\80\80\00\00\41\01\04\7f\10\00\41\01\05\41\00\0b"
    "\0b"
  )
""
)